tests/ui/consts/const-eval/erroneous-const.stderr
error[E0080]: evaluation of `PrintName::<i32>::VOID` failed
  --> $DIR/erroneous-const.rs:6:22
   |
LL |     const VOID: () = [()][2];
   |                      ^^^^^^^ index out of bounds: the length is 1 but the index is 2

note: erroneous constant used
  --> $DIR/erroneous-const.rs:13:13
   |
LL |             PrintName::<T>::VOID;
   |             ^^^^^^^^^^^^^^^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0080`.
